Rename files, update class names, and apply code formatting